@@ -14,6 +14,7 @@
 - fixed HTML parser by adding fallback for the non-exists end tag
 - fixed `debug` mode for `.html` plugins/extensions/components
 - extended `Icon` schema type by adding support for Total.js Icons
+- fixed applying of `controller.status` for `controller.invalid()` method
 
 ========================
 0.0.71
